--- a/content/coronavirus_landing_page.yml
+++ b/content/coronavirus_landing_page.yml
@@ -133,9 +133,9 @@ content:
         - title:
           list:
            - label: "Renting: guidance for landlords, tenants and local authorities"
-             url: /government/publications/covid-19-and-renting-guidance-for-landlords-tenants-and-local-authorities           
+             url: /government/publications/covid-19-and-renting-guidance-for-landlords-tenants-and-local-authorities
            - label: "Moving homes during the coronavirus outbreak"
-             url: /guidance/government-advice-on-home-moving-during-the-coronavirus-covid-19-outbreak                
+             url: /guidance/government-advice-on-home-moving-during-the-coronavirus-covid-19-outbreak
            - label: Planning inspections
              url: /guidance/coronavirus-covid-19-planning-inspectorate-guidance
     - title: Driving and transport in the UK
@@ -262,9 +262,14 @@ content:
       url: https://www.youtube.com/user/Number10gov/videos
       previous_videos_text: Watch all press conferences on YouTube
       next_conference_text: The next live press conference will be shown here
+    # set spaced_links to true to insert breaks in the list of links, for increased legibility
+    spaced_links: false
     ask_a_question_visible: true
     ask_a_question_text: Ask a question at the next press conference
     ask_a_question_link: /ask
+    popular_questions_link_visible: false
+    see_popular_questions_text: See the types of questions submitted by the public
+    see_popular_questions_link: /we-dont-know-this-yet
     transcript_text: Read all press conference statements
     transcript_link: /government/collections/slides-and-datasets-to-accompany-coronavirus-press-conferences#transcripts
     # video_url and date are set by https://collections-publisher.publishing.service.gov.uk/coronavirus/live_stream.
