Update search links
We want to restrict guidance to _actual_ guidance at this point.

We also don't want to use the topic finder style search (which is what
the /search/news-and-communications page does for us), because it doesn't
give easy ways of navigating to more information right now.

So, we've moved to just using standard facets on site search.

Guidance is ordered by most-viewed, because this reassures people that they're
looking at the right place (they're likely to have heard of the popular items).

News is ordered by recency, because contemporaneous information is most important
here.

--- a/content/coronavirus_business_page.yml
+++ b/content/coronavirus_business_page.yml
@@ -84,9 +84,9 @@ content:
     header: "All coronavirus business support information on GOV.UK"
     links:
       - label: "Guidance"
-        url: "/search/all?level_one_taxon=5b7b9532-a775-4bd2-a3aa-6ce380184b6c&level_two_taxon=65666cdf-b177-4d79-9687-b9c32805e450"
+        url: "/search/all?level_one_taxon=5b7b9532-a775-4bd2-a3aa-6ce380184b6c&level_two_taxon=65666cdf-b177-4d79-9687-b9c32805e450&content_purpose_supergroup%5B%5D=guidance_and_regulation&order=most-viewed"
       - label: "News"
-        url: "/search/news-and-communications?parent=/coronavirus-taxon/businesses-and-self-employed-people&topic=65666cdf-b177-4d79-9687-b9c32805e450&order=updated-newest"
+        url: "/search/all?level_one_taxon=5b7b9532-a775-4bd2-a3aa-6ce380184b6c&level_two_taxon=65666cdf-b177-4d79-9687-b9c32805e450&content_purpose_supergroup%5B%5D=news_and_communications&order=updated-newest"
   notifications:
     intro: "Stay up to date with GOV.UK"
     email_link: "Sign up to get emails when we add new coronavirus business support information"
