--- a/content/coronavirus_landing_page.yml
+++ b/content/coronavirus_landing_page.yml
@@ -16,16 +16,8 @@ content:
       link_text: "Postcode checker: find out the tier for your area"
       link_nowrap_text: ""
   announcements_label: Announcements
+  # Announcements are edited in https://collections-publisher.publishing.service.gov.uk/coronavirus/landing
   announcements:
-    - text: "UK Chief Medical Officers announces a change to the self-isolation period from 14 to 10 days"
-      href: /government/news/uk-chief-medical-officers-statement-on-the-self-isolation-period-11-december-2020
-      published_text: Published 11 December 2020
-    - text: "Targeted testing to be offered to children in north east London, Kent and Essex"
-      href: /government/news/targeted-testing-to-be-offered-to-children-in-north-east-london-kent-and-essex
-      published_text: Published 11 December 2020
-    - text: "People with long-term health conditions urged to get flu vaccine before Christmas"
-      href: /government/news/people-with-long-term-health-conditions-urged-to-get-flu-vaccine-before-christmas
-      published_text: Published 11 December 2020
   see_all_announcements_link:
     text: See all announcements
     href: "/search/all?level_one_taxon=5b7b9532-a775-4bd2-a3aa-6ce380184b6c&content_purpose_supergroup%5B%5D=news_and_communications&order=updated-newest"
